<resources>

    <string-array name="main_subs">
        <item>Главная</item>
    </string-array>
    <string-array name="main_keys">
        <item>/</item>
    </string-array>

    <string-array name="society_subs">
        <item>Политика</item>
        <item>Общество</item>
        <item>Власть</item>
        <item>Культура</item>
        <item>Образование</item>
        <item>Здоровье</item>
        <item>Официально</item>
        <item>Спорт</item>
    </string-array>
    <string-array name="society_keys">
        <item>vlast</item>
        <item>society</item>
        <item>authorities</item>
        <item>culture</item>
        <item>education</item>
        <item>health</item>
        <item>officially</item>
        <item>sport</item>
    </string-array>

    <string-array name="habitat_subs">
        <item>Среда обитания</item>
        <item>Полезное</item>
        <item>Цены</item>
    </string-array>
    <string-array name="habitat_keys">
        <item>habitat</item>
        <item>useful</item>
        <item>price</item>
    </string-array>

    <string-array name="roads_subs">
        <item>Дороги</item>
        <item>Авто</item>
    </string-array>
    <string-array name="roads_keys">
        <item>public</item>
        <item>auto</item>
    </string-array>

    <string-array name="security_subs">
        <item>Безопасность</item>
    </string-array>
    <string-array name="security_keys">
        <item>security</item>
    </string-array>

    <string-array name="accidents_subs">
        <item>Криминал</item>
        <item>Проишествия</item>
    </string-array>
    <string-array name="accidents_keys">
        <item>crime</item>
        <item>accident</item>
    </string-array>

    <string-array name="documents_subs">
        <item>Документы</item>
    </string-array>
    <string-array name="documents_keys">
        <item>documents</item>
    </string-array>

    <string-array name="poster_subs">
        <item>Афиша</item>
    </string-array>
    <string-array name="poster_keys">
        <item>afisha</item>
    </string-array>

    <string name="theme_main">Главная</string>
    <string name="theme_society">Общество</string>
    <string name="theme_habitat">Среда обитания</string>
    <string name="theme_roads">Дороги</string>
    <string name="theme_security">Безопасность</string>
    <string name="theme_accidents">Проишествия</string>
    <string name="theme_documents">Документы</string>
    <string name="theme_poster">Афиша</string>
    
    <string name="app_name">Смоленская газета</string>
    <string name="action_settings">Settings</string>
</resources>
