<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_main"
        android:title="@string/theme_main" />

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_society"
            android:title="@string/theme_society"/>
        <item
            android:id="@+id/nav_habitat"
            android:title="@string/theme_habitat"/>
        <item
            android:id="@+id/nav_roads"
            android:title="@string/theme_roads"/>
        <item
            android:id="@+id/nav_security"
            android:title="@string/theme_security"/>
        <item
            android:id="@+id/nav_accidents"
            android:title="@string/theme_accidents"/>
        <item
            android:id="@+id/nav_documents"
            android:title="@string/theme_documents"/>
    </group>


</menu>